--- a/public/css/all-style.css
+++ b/public/css/all-style.css
@@ -1,4 +1,10 @@
-/* ============================================================================================================================ */
+@import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@300;400;700&display=swap');
+
+body {
+  font-family: 'Source Sans Pro', sans-serif;
+  font-weight: 400;
+}
+
 section.content {
   min-height: 100vh;
 }
@@ -15,3 +21,4 @@ footer.main-footer {
   left: 0;
   width: 100%;
 }
+/* +================================================++================================================++================================================++================================================+ */
